feat: remove NextFeedRequest DTO model
